Add pagination and filter to personMovies method
